--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -67,6 +67,9 @@
 {{- /* Add extended css after theme style */ -}}
 {{- $stylesheet := (slice $license_css $core $extended) | resources.Concat "assets/css/stylesheet.css"  }}
 
+{{- /* added by p15r */}}
+<link rel="stylesheet" href="{{ "css/custom.css" | relURL }}">
+
 {{- if not site.Params.assets.disableFingerprinting }}
 {{- $stylesheet := $stylesheet | fingerprint }}
 <link crossorigin="anonymous" href="{{ $stylesheet.RelPermalink }}" integrity="{{ $stylesheet.Data.Integrity }}" rel="preload stylesheet" as="style">
